# eth_listener

./: .gitignore  .gitmodules  Cargo.toml  build-config.toml.template  build.rs  config.toml.template  init.sql
.github/workflows/: lint.yml  test.yml
docker/: docker-compose.yaml
src/: block_stream.rs  config.rs  erc20.rs  infos.rs  lib.rs  main.rs  persist.rs  restapi.rs
templates/: events.rs
