[package]
name = "eth_listener"
version = "0.1.0"
edition = "2018"

[lib]

[dependencies]
anyhow = "1.0"
ethers = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.9", features = ["full"] }

[build-dependencies]
anyhow = "1.0"
ethers = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tera = { version = "1.12", default-features = false }
convert_case = "0.4.0"
