[package]
name = "eth_listener"
version = "0.1.0"
edition = "2018"

[lib]

[dependencies]
anyhow = "1.0"
ethers = "0.2.2"
futures = "0.3.16"
futures-util = "0.3.16"
hex = "0.4.3"
log = "0.4.14"
once_cell = "1.8.0"
orchestra = { git = "https://github.com/fluidex/orchestra.git", features = ["exchange"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.9", features = ["full"] }
toml = "0.5.8"

[build-dependencies]
anyhow = "1.0"
ethers = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tera = { version = "1.12", default-features = false }
convert_case = "0.4.0"
