[package]
name = "eth_listener"
version = "0.1.0"
edition = "2018"

[lib]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
ethers = { version = "0.6", features = ["ws"] }
futures = "0.3"
futures-util = "0.3"
hex = "0.4.3"
log = "0.4.14"
once_cell = "1.8.0"
orchestra = { git = "https://github.com/fluidex/orchestra.git", features = ["exchange"] }
pretty_env_logger = "0.4.0"
reqwest = "0.11.4"
rust_decimal = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.14", features = ["full"] }
tokio-postgres = "0.7"
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
toml = "0.5.8"
tonic = "0.5.2"

[build-dependencies]
anyhow = "1.0"
ethers = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
tera = { version = "1.15", default-features = false }
convert_case = "0.4.0"

[features]
new_token = []
offline = []
